--- a/public/the_bridge_templates/team/our_team.html
+++ b/public/the_bridge_templates/team/our_team.html
@@ -3,18 +3,20 @@
   <header class="header-image">
     <div class="headline our-team">
           <h1>
-      <i class="fa fa-credit-card"></i> tiered <strong>Pricing</strong>
+      <i class="fa fa-credit-card"></i> our <strong>Team</strong>
     </h1>
-    <h3>
-      Unlock the <strong>potential</strong> of your current technologies.
-    </h3>
     </div>
   </header>
     <div class="container col-md-8 col-md-offset-2 team-member-page">
-    <br> <br>
-<!--     TODO: Write an about us section -->
-    <p> This is where the about us text will go. PLEASE INSERT TEXT</p>
-    <h1>Our Team</h1>
+    <br><br>
+    <p>
+      In 2014, Vera Solutions was awarded a research and development grant to explore leveraging our years of expertise in the technology for international development space through software, rather than consulting. We had completed hundreds of projects with leading international development groups, and had first-hand experience with dozens of technologies. We found that the single most common unmet need was integration. In August 2014 Vera's CEO and co-founder, Taylor, stepped away to focus full time on <strong>open[Fn]</strong>, a non-profit and completely open-source data integration platform, that now aims to connect and drastically improve the efficiency and effectiveness of the "technology for development" sector.
+    </p>
+    <br>
+    <p>
+      Karti Subramanian and Zak Kaufman, Vera's other co-founders, sit on the board of open[Fn] along with Steven Downs, Colin Powers, and Noah Elkrief. 
+    </p>
+    <br><br>
   <div class="row team-member-page" ng-repeat="member in team | orderBy:'order'">
 
       <div class="container col-md-3">
@@ -28,29 +30,8 @@
         <br>
         
       </div>
-      <div class="line-separator"></div>
+      <!-- <div class="line-separator"></div> -->
       <div class="divider"></div>
     </div>
   </div>
 </div>
-
-<!-- 
-
-
-  <br>
-  <div class="row" ng-repeat="member in team">
-    <div class="col-md-2 col-md-offset-2">
-    <img ng-src="{{member.picture_url}}" class= "team-member">
-      <div class="line-separator"></div>
-    </div>
-    <div class="col-md-6">
-      <h2><b>{{member.name}}</b></h2>
-      <br>
-      <p>{{member.bio}}</p>
-      <br>
-    </div>
-      <div class="divider"></div>
-  </div>
-</div>
-
-</div> -->
