--- a/public/the_bridge_templates/team/our_team.html
+++ b/public/the_bridge_templates/team/our_team.html
@@ -3,18 +3,18 @@
   <header class="header-image">
     <div class="headline our-team">
           <h1>
-      <i class="fa fa-credit-card"></i> our <strong>Team</strong>
+      <i class="fa fa-users"></i>&nbsp our <strong>Team</strong>
     </h1>
     </div>
   </header>
     <div class="container col-md-8 col-md-offset-2 team-member-page">
     <br><br>
     <p>
-      In 2014, Vera Solutions was awarded a research and development grant to explore leveraging our years of expertise in the technology for international development space through software, rather than consulting. We had completed hundreds of projects with leading international development groups, and had first-hand experience with dozens of technologies. We found that the single most common unmet need was integration. In August 2014 Vera's CEO and co-founder, Taylor, stepped away to focus full time on <strong>open[Fn]</strong>, a non-profit and completely open-source data integration platform, that now aims to connect and drastically improve the efficiency and effectiveness of the "technology for development" sector.
-    </p>
-    <br>
-    <p>
-      Karti Subramanian and Zak Kaufman, Vera's other co-founders, sit on the board of open[Fn] along with Steven Downs, Colin Powers, and Noah Elkrief. 
+      In 2014, Vera Solutions was awarded a research and development grant to leverage our years of expertise in the technology for international development space through software development, rather than consulting. Having completed hundreds of projects with leading international development groups, and having first-hand experience with dozens of technologies, we found that the single most common unmet need was <strong>integration</strong>. In August 2014 Vera's CEO and co-founder, Taylor, stepped away to focus full time on <strong>open[Fn]</strong>.
+    <br><br>
+      This non-profit and fully open-source data integration platform aims to connect the "technology for development" sector.
+    <br><br>
+      Karti Subramanian and Zak Kaufman, Vera's other co-founders, sit on the board of open[Fn] with Steven Downs, Colin Powers, and Noah Elkrief. Our team is largely remote, and we rely on tremendous support from the open-source community.
     </p>
     <br><br>
   <div class="row team-member-page" ng-repeat="member in team | orderBy:'order'">
