product provider to email

--- a/public/the_bridge_templates/product/edit.html
+++ b/public/the_bridge_templates/product/edit.html
@@ -37,13 +37,13 @@
                       <label for="InputTechName">Name</label>
                       <input type="text" class="form-control" id="InputTechName" ng-model="product.name"><br>
                       <label for="InputTechName">Website</label>
-                      <input type="text" class="form-control" id="InputTechName" ng-model="product.website"><br>
+                      <input type="text" class="form-control" id="InputTechWebsite" ng-model="product.website"><br>
                       <label for="InputTechName">Twitter handle</label>
-                      <input type="text" class="form-control" id="InputTechName" ng-model="product.twitter"><br>
+                      <input type="text" class="form-control" id="InputTechTwitter" ng-model="product.twitter"><br>
                       <label for="InputTechName">Contact email</label>
-                      <input type="email" class="form-control" id="InputTechName" ng-model="product.provider"><br>
+                      <input type="email" class="form-control" id="InputTechEmail" ng-model="product.email"><br>
                       <label for="InputTechName">Tile summary (116 chars.)</label>
-                      <textarea class="form-control" id="InputTechName" ng-model="product.description" title="Describe what this technology does as clearly as possible in 116 characters. Omit buzzwords and sensational claims." rows="3"></textarea>
+                      <textarea class="form-control" id="InputTechDescription" ng-model="product.description" title="Describe what this technology does as clearly as possible in 116 characters. Omit buzzwords and sensational claims." rows="3"></textarea>
                     </div>
                   </div>
                 </tab>
