styling login and review modals

--- a/public/the_bridge_templates/product/show.html
+++ b/public/the_bridge_templates/product/show.html
@@ -192,7 +192,7 @@
           <br>
           <form method="post">
             <span><strong>Review (1000 chars)</strong></span><br><br>
-            <textarea ng-model = "post.review" rows="25" cols="50" name="review" placeholder="Something thougtful and helpful..." class="fsField fsRequired fsTextAreaMaxLength", maxlength = "1000" required /></textarea>
+            <textarea class="form-control" ng-model="post.review" rows="25" cols="50" name="review" placeholder="Write your review here..."></textarea>
             <br>
             <br>
             <div ng-controller="RatingDemoCtrl">
