Got the post to go through

--- a/public/the_bridge_templates/user/signup.html
+++ b/public/the_bridge_templates/user/signup.html
@@ -22,13 +22,13 @@
 
               <div class="panel-body">
 
-                  <form ng-submit="userCtrl.submitUserForm()">
-                    <input type="text" class="form-control" name = "email" placeholder="Email" ng-model="userCtrl.formData.email">
-                    <input type="text" class="form-control" name = "password" placeholder="Password" ng-model="userCtrl.formData.password">
-                    <input type="text" class="form-control" name = "password_confirmation" placeholder="Password Confirmation" ng-model="userCtrl.formData.password_confirmation">
-                    <input type="text" class="form-control" name = "first_name" placeholder="First Name" ng-model="userCtrl.formData.first_name">
-                    <input type="text" class="form-control" name = "last_name" placeholder="Last Name" ng-model="userCtrl.formData.last_name">
-                    <input type="text" class="form-control" name = "organisation" placeholder="Organisation" ng-model="userCtrl.formData.organisation">
+                  <form ng-submit="submitUserForm()">
+                    <input type="text" class="form-control" name = "email" placeholder="Email" ng-model="formData.email">
+                    <input type="text" class="form-control" name = "password" placeholder="Password" ng-model="formData.password">
+                    <input type="text" class="form-control" name = "password_confirmation" placeholder="Password Confirmation" ng-model="formData.password_confirmation">
+                    <input type="text" class="form-control" name = "first_name" placeholder="First Name" ng-model="formData.first_name">
+                    <input type="text" class="form-control" name = "last_name" placeholder="Last Name" ng-model="formData.last_name">
+                    <input type="text" class="form-control" name = "organisation" placeholder="Organisation" ng-model="formData.organisation">
 
                     <button type="submit" class="btn btn-success btn-lg btn-block">
                       Submit!
