make content external link on welcome page

--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -84,7 +84,7 @@
 
   <div class="featurette" id="marketplace">
     <div class="container">
-      <a href="/release-notes">
+      <a href="https://medium.com/@openFn" target="_blank">
         <div class="row">
           <div class="col-md-8 col-md-push-4 text-right">
             <h2 class="featurette-heading">
