--- a/public/the_bridge_templates/user/credentials.html
+++ b/public/the_bridge_templates/user/credentials.html
@@ -1,63 +1,61 @@
-<div class="panel-heading" role="tab" id="headingTwo">
-  <h4 class="panel-title">
-    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-      <%= form_for @user, role: 'form' do |f| %>
-      ODK / SurveyCTO
-    </a>
-  </h4>
+<div ng-controller="UserController as userCtrl">
+  <div class="btn-group plan_btn" data-toggle="buttons">
+    <label class="btn btn-default free pay"  ng-click="clickPlan('Free')">
+      <input type="radio" name="options" ng-class="{'active': buttons.free.active}" ng-checked="buttons.free.checked" data-name="Free" data-amount="free"> Free
+    </label>
+    <label class="btn btn-default pay"  ng-click="clickPlan('Entry')">
+      <input type="radio" name="options" ng-class="{'active': buttons.entry.active}" ng-checked="buttons.entry.checked" data-name="Entry" data-amount="3900"> Entry $39/mo.
+    </label>
+    <label class="btn btn-default pay"  ng-click="clickPlan('Startup')">
+      <input type="radio" name="options" ng-class="{'active': buttons.startup.active}" ng-checked="buttons.startup.checked" data-name="Startup" data-amount="7900"> Startup $79/mo.
+    </label>
+    <label class="btn btn-default pay" ng-click="clickPlan('Growth')">
+      <input type="radio" name="options" ng-class="{'active': buttons.growth.active}" ng-checked="buttons.growth.checked" data-name="Growth" data-amount="29900"> Growth $299/mo.
+    </label>
+    <label class="btn btn-default pay" ng-click="clickPlan('Enterprise')">
+      <input type="radio" name="options" ng-class="{'active': buttons.enterprise.active}" ng-checked="buttons.enterprise.checked" data-name="Enterprise" data-amount="99900"> Enterprise
+    </label>
+  </div>
+  <div class="hidden">
+    <input id="key" ng-model="key">
+    <input id="user_subscription_plan" ng-model="current_plan">
+    <input id="user_stripe_token" ng-model="token">
+  </div>
+  <button class="submit_btn">Submit
+  </button>
 </div>
-<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-  <div class="panel-body">
-
-
-
-
-
-
-
-
-    <div class="form-group">
-      <%= f.label :odk_url, "Instance URL" %>
-      <%= f.text_field :odk_url, class: 'form-control' %>
-    </div>
-
-    <div class="form-group">
-      <%= f.label :odk_username, "Username" %>
-      <%= f.text_field :odk_username, class: 'form-control' %>
-    </div>
-
-    <div class="form-group">
-      <%= f.label :odk_password, "Password" %>
-      <%= f.password_field :odk_password, value: f.object.odk_password, class: 'form-control' %>
-    </div>
-
-    <div class="form-group">
-      <%=f.hidden_field :subscription_plan, value: @user.new_record? ? nil : @user.plan.try(:name)%>
-    </div>
-
-    <%= f.submit "Update", class: 'btn btn-primary' %>
-    <% end %>
-
-
-
-
-
-    <form ng-submit="submitUserForm()">
-      <input type="text" class="form-control" name = "email" placeholder="Instance URL" ng-model="formData.email">
-      <input type="text" class="form-control" name = "password" placeholder="Username" ng-model="formData.password">
-      <input type="text" class="form-control" name = "password_confirmation" placeholder="Password" ng-model="formData.password_confirmation">
-     
-
-      <button type="submit" class="btn btn-success btn-lg btn-block">
-        Update
-      </button>              
-  </form>
-
-
-
-
-
-
-
-    </div>
-</div>
+<script>
+var handler = StripeCheckout.configure({
+    key: $("#key").val(),
+    token: function(token) {
+      $("#user_stripe_token").val(token.id);
+      plan_name = $('.plan_btn').find('input:checked').data('name');
+      $("#user_subscription_plan").val(plan_name);
+      $("form#signup_form").submit();
+    }
+  });
+  $(".submit_btn").click(function(e){
+    amount = $('.plan_btn').find('input:checked').data('amount');
+    plan_name = $('.plan_btn').find('input:checked').data('name');
+    email = $("#user_email").val();
+    if(amount == 'free'){
+      $("#user_subscription_plan").val('Free');
+    }else if($("#user_subscription_plan").val() != plan_name){
+      if(amount != 'free'){
+        if($("#user_stripe_token").val() == ""){
+          handler.open({
+            name: 'OpenFn',
+            amount: amount,
+            email: email,
+            panelLabel: 'Signup for '+ plan_name
+          });
+          return false;
+        }
+      }
+    }
+  });
+  // Close Checkout on page navigation
+  $(window).on('popstate', function() {
+    handler.close();
+  });
+</script>
