new branch for forms

--- a/public/the_bridge_templates/user/credentials.html
+++ b/public/the_bridge_templates/user/credentials.html
@@ -18,8 +18,8 @@
           </a>
         </h4>
       </div>
-      
-      <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+
+      <div id="collapseTwo" class="panel-collapse " role="tabpanel" aria-labelledby="headingTwo">
         <div class="panel-body">
 
 
