Clean controller some

--- a/public/the_bridge_templates/user/credentials.html
+++ b/public/the_bridge_templates/user/credentials.html
@@ -1,20 +1,23 @@
 <div ng-controller="UserController as userCtrl">
   <div class="btn-group plan_btn" data-toggle="buttons">
     <label class="btn btn-default free pay"  ng-click="clickPlan('Free')">
-      <input type="radio" name="options" ng-class="{'active': buttons.free.active}" ng-checked="buttons.free.checked" data-name="Free" data-amount="free"> Free
+      <input type="radio" name="options" data-name="Free" data-amount="free"> Free
     </label>
     <label class="btn btn-default pay"  ng-click="clickPlan('Entry')">
-      <input type="radio" name="options" ng-class="{'active': buttons.entry.active}" ng-checked="buttons.entry.checked" data-name="Entry" data-amount="3900"> Entry $39/mo.
+      <input type="radio" name="options" data-name="Entry" data-amount="3900"> Entry $39/mo.
     </label>
     <label class="btn btn-default pay"  ng-click="clickPlan('Startup')">
-      <input type="radio" name="options" ng-class="{'active': buttons.startup.active}" ng-checked="buttons.startup.checked" data-name="Startup" data-amount="7900"> Startup $79/mo.
+      <input type="radio" name="options" data-name="Startup" data-amount="7900"> Startup $79/mo.
     </label>
     <label class="btn btn-default pay" ng-click="clickPlan('Growth')">
-      <input type="radio" name="options" ng-class="{'active': buttons.growth.active}" ng-checked="buttons.growth.checked" data-name="Growth" data-amount="29900"> Growth $299/mo.
+      <input type="radio" name="options" data-name="Growth" data-amount="29900"> Growth $299/mo.
     </label>
     <label class="btn btn-default pay" ng-click="clickPlan('Enterprise')">
-      <input type="radio" name="options" ng-class="{'active': buttons.enterprise.active}" ng-checked="buttons.enterprise.checked" data-name="Enterprise" data-amount="99900"> Enterprise
+      <input type="radio" name="options" data-name="Enterprise" data-amount="99900"> Enterprise
     </label>
+  </div>
+  <div id="coupon" ng-show="coupon">
+    <input>
   </div>
   <div class="hidden">
     <input id="key" ng-model="key">
@@ -25,7 +28,9 @@
   </button>
 </div>
 <script>
-var handler = StripeCheckout.configure({
+
+  $(".submit_btn").click(function(e){
+    var handler = StripeCheckout.configure({
     key: $("#key").val(),
     token: function(token) {
       $("#user_stripe_token").val(token.id);
@@ -33,8 +38,7 @@ var handler = StripeCheckout.configure({
       $("#user_subscription_plan").val(plan_name);
       $("form#signup_form").submit();
     }
-  });
-  $(".submit_btn").click(function(e){
+    });
     amount = $('.plan_btn').find('input:checked').data('amount');
     plan_name = $('.plan_btn').find('input:checked').data('name');
     email = $("#user_email").val();
