convert rails footer to angular

--- a/public/the_bridge_templates/footer.html
+++ b/public/the_bridge_templates/footer.html
@@ -1,7 +1,6 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-
       <p class="text-center">
         open[Fn] is connecting technologies for a more efficient development sector. We are a non-profit and all of our code is open source.
         <br><br>
@@ -10,15 +9,15 @@
         </a>, 
         <a href="mailto:admin@openfn.org" target="_blank">
          get in touch over email <i class="fa fa-envelope-o fa-lg"></i>
-        </a>, or follow us on facebook
+        </a>, or follow us on 
         <a href="https://www.facebook.com/openfn" target="_blank">
-          <i class="fa fa-facebook fa-lg"></i> 
-        </a>, twitter
+          facebook <i class="fa fa-facebook fa-lg"></i> 
+        </a>, 
         <a href="https://twitter.com/openfn" target="_blank">
-          <i class="fa fa-twitter fa-lg"></i>
-        </a> , and medium
+          twitter <i class="fa fa-twitter fa-lg"></i>
+        </a> , and 
         <a href="https://medium.com/@openFn/" target="_blank">
-          <i class="fa fa-medium fa-lg"></i>
+          medium <i class="fa fa-medium fa-lg"></i>
         </a>.
       </p>
     </div>
