--- a/public/the_bridge_templates/user/credentials.html
+++ b/public/the_bridge_templates/user/credentials.html
@@ -13,7 +13,6 @@
       <div class="panel-heading" role="tab" id="headingTwo">
         <h4 class="panel-title">
           <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-            
             ODK / SurveyCTO
           </a>
         </h4>
@@ -21,7 +20,6 @@
 
       <div id="collapseTwo" class="panel-collapse " role="tabpanel" aria-labelledby="headingTwo">
         <div class="panel-body">
-
 
         <form ng-submit="submitODKForm()">
           <input type="text" class="form-control" name = "odk_url" placeholder="Instance URL" ng-model="odkData.odk_url">
@@ -35,6 +33,106 @@
 
         </div>
       </div>
+
+
+
+      <!-- <div class="panel-heading" role="tab" id="headingThree">
+        <h4 class="panel-title">
+          <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              Salesforce.com
+          </a>
+        </h4>
+      </div>
+
+
+      <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+        <div class="panel-body">
+
+        <form ng-submit="submitSFForm()">
+          <input type="text" class="form-control" name = "odk_url" placeholder="Instance URL" ng-model="odkData.odk_url">
+          <input type="text" class="form-control" name = "odk_username" placeholder="Username" ng-model="odkData.odk_username">
+          <input type="password" class="form-control" name = "odk_password" placeholder="Password" ng-model="odkData.odk_password">
+          <input type="hidden" name="subscription_plan" ng-model="odkData.subscription_plan">
+          <button type="submit" class="btn btn-success btn-lg btn-block">
+            Update
+          </button>              
+        </form>
+
+
+
+
+
+          <div class="form-group">
+            <div class="form-group">
+              <%= f.label :sf_username, "Username" %>
+              <%= f.text_field :sf_username, class: 'form-control' %>
+            </div>
+            <div class="form-group">
+              <%= f.label :sf_password, "Password" %>
+              <%= f.password_field :sf_password, value: f.object.sf_password, class: 'form-control' %>
+            </div>
+            <div class="form-group">
+              <a data-toggle="collapse" data-parent="#accordion21" href="#collapseTwoOne">
+              <%= f.label :sf_security_token, "Security Token" %>
+              <i class="fa fa-question-circle"></i>
+              </a>
+              <%= f.text_field :sf_security_token, class: 'form-control' %>
+              <div id="collapseTwoOne" class="panel-collapse collapse"><br>
+                <p>1. Search “security token” in your email to see if you've received a security token in the past. (If you have, go to step 5.)</p>
+                <p>2. To reset or create a new security token, click your name and “Setup” in Salesforce</p>
+                <p>3. Go to “Personal Information” and click “reset your security token”.</p>
+                <p>4. Read the warnings, then click “Reset Security Token”.</p>
+                <p>5. Copy your security token from your email and paste it here.</p>
+              </div>
+            </div>
+            <div class="form-group">
+              <a data-toggle="collapse" data-parent="#accordion21" href="#collapseTwoTwo">
+                <%= f.label :sf_app_key, "Consumer Key" %>
+                <i class="fa fa-question-circle"></i>
+              </a>
+              <%= f.text_field :sf_app_key, class: 'form-control' %>
+              <div id="collapseTwoTwo" class="panel-collapse collapse">
+                  <br>
+                  <p>1. Goto “Apps” (in the “App Setup” / “Create” section) in your Salesforce Setup menu.</p>
+                  <p>2. Click “New” in the “Connected Apps” section at the bottom of the page.</p>
+                  <p>3. Type “OpenFn” in the “Connected App Name” field.</p>
+                  <p>4. Type “OpenFn” in the “API Name” field.</p>
+                  <p>5. Type your email in the “Contact Email” field.</p>
+                  <p>6. Click “Enable OAuth Settings” in the “API (Enable OAuth Settings)” section.</p>
+                  <p>7. Enter “https://login.salesforce.com” in the “Callback URL” field.</p>
+                  <p>8. Add “Access and manage your data (api)” in the “Available OAuth Scopes” section.</p>
+                  <p>9. Click “Save”.</p>
+                  <p>10. Copy the “Consumer Key” and paste it here.</p>
+                  <p>11. Click to reveal your “Consumer Secret”, then copy it and paste it here.</p>
+              </div>
+            </div>
+            <div class="form-group">
+              <%= f.label :sf_app_secret, "Consumer Secret" %>
+              <%= f.text_field :sf_app_secret, class: 'form-control' %>
+            </div>
+            <div class="form-group">
+              <%=f.hidden_field :subscription_plan, value: @user.new_record? ? nil : @user.plan.try(:name)%>
+            </div>
+            <div class="form-group">
+              <%= f.label :sf_host, "Salesforce Org Type" %>
+              <br>
+              <%= f.select :sf_host, class: 'form-control' do %>
+                <% [['Production', "login.salesforce.com"], ['Sandbox', "test.salesforce.com"]].each do |c| -%>
+                  <%= content_tag(:option, c.first, value: c.last) %>
+                <% end %>
+              <% end %>
+            </div>
+            <%= f.submit "Update", class: 'btn btn-primary' %>
+            <% end %>
+
+        </div>
+      </div>
+
+ -->
+
+
+
+
 
 
       </div>
