--- a/public/the_bridge_templates/user/user_info.html
+++ b/public/the_bridge_templates/user/user_info.html
@@ -40,10 +40,30 @@
                     <input type="text" class="form-control" name = "first_name" placeholder="First Name" ng-model="formData.first_name">
                     <input type="text" class="form-control" name = "last_name" placeholder="Last Name" ng-model="formData.last_name">
                     <input type="text" class="form-control" name = "organisation" placeholder="Organisation" ng-model="formData.organisation">
-
+                    <div class="btn-group plan_btn" data-toggle="buttons">
+                        <label class="btn btn-default free pay"  ng-click="clickPlan('Free')">
+                          <input type="radio" name="options" data-name="Free" data-amount="free"> Free
+                        </label>
+                        <label class="btn btn-default pay"  ng-click="clickPlan('Entry')">
+                          <input type="radio" name="options" data-name="Entry" data-amount="3900"> Entry $39/mo.
+                        </label>
+                        <label class="btn btn-default pay"  ng-click="clickPlan('Startup')">
+                          <input type="radio" name="options" data-name="Startup" data-amount="7900"> Startup $79/mo.
+                        </label>
+                        <label class="btn btn-default pay" ng-click="clickPlan('Growth')">
+                          <input type="radio" name="options" data-name="Growth" data-amount="29900"> Growth $299/mo.
+                        </label>
+                        <label class="btn btn-default pay" ng-click="clickPlan('Enterprise')">
+                          <input type="radio" name="options" data-name="Enterprise" data-amount="99900"> Enterprise
+                        </label>
+                    </div>
+                    <div id="coupon" ng-show="coupon">
+                      <input>
+                    </div>
                    
+                    <input type="hidden" ng-model="key"
                     <input type="hidden" name="stripe_token" ng-model="formData.stripe_token">
-                    <input type="hidden" name="subscription_plan" ng-model="formData.subscription_plan">
+                    <input type="hidden" id="user_subscription_plan" ng-model="formData.subscription_plan">
                     <input type="hidden" name="subsctiption_plan" value="">
 
                     <button type="submit" class="btn btn-success btn-lg btn-block">
@@ -61,3 +81,38 @@
             </div>
 </div>
 </div>
+<script>
+  $(".btn-success").click(function(e){
+    var handler = StripeCheckout.configure({
+    key: $("#key").val(),
+    token: function(token) {
+      $("#user_stripe_token").val(token.id);
+      plan_name = $('.plan_btn').find('input:checked').data('name');
+      $("#user_subscription_plan").val(plan_name);
+      $("form#signup_form").submit();
+    }
+    });
+    amount = $('.plan_btn').find('input:checked').data('amount');
+    plan_name = $('.plan_btn').find('input:checked').data('name');
+    email = $("#user_email").val();
+    if(amount == 'free'){
+      $("#user_subscription_plan").val('Free');
+    }else if($("#user_subscription_plan").val() != plan_name){
+      if(amount != 'free'){
+        if($("#user_stripe_token").val() == ""){
+          handler.open({
+            name: 'OpenFn',
+            amount: amount,
+            email: email,
+            panelLabel: 'Signup for '+ plan_name
+          });
+          return false;
+        }
+      }
+    }
+  });
+  // Close Checkout on page navigation
+  $(window).on('popstate', function() {
+    handler.close();
+  });
+</script>
