--- a/public/the_bridge_templates/team/our_team.html
+++ b/public/the_bridge_templates/team/our_team.html
@@ -26,7 +26,7 @@
       <div class="col-md-9">
         <h2><b>{{member.name}}</b><small>&nbsp&nbsp{{member.title}}</small></h2>
         <h3></h3>
-        <p>{{member.bio}}</p>
+        <p ng-bind-html="member.bio"></p>
         <br>
         
       </div>
