Working link, change view of current draft of new product

--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="col-md-10 col-md-offset-1">  
           <div class="new-product-link">
-            <label style="float: left;" class="btn integrated-btn" disabled="disabled">
+            <label style="float: left;" class="btn integrated-btn" ng-click="go('/product/new')">
               <i class="fa fa-plus"></i> Add your product
             </label>
             <label style="float: right;" class="btn integrated-btn" ng-click="removeTagFilters()">Clear Filters</label>
