styling and adding angular name

--- a/public/the_bridge_templates/product/new.html
+++ b/public/the_bridge_templates/product/new.html
@@ -17,7 +17,7 @@
                 Editor - <i class="fa fa-edit fa-lg"></i>
               </span>
               <br>
-              New Product
+              {{product.name}}
             </div>
           </div>
         </div>
@@ -217,11 +217,11 @@
           </div>
         </div>
 
-        <br>
+<!--         <br>
 
         <div class="row flat">
           <div class="col-sm-12">
-            <div class="show-product">
+            <div class="show-product"> -->
 
 <!-- THIS SHOULD BE IT'S OWN RESOURCE, USED HERE AND ON THE PRODUCT/#/EDIT PAGE -->
 <!-- <div class="tags">
@@ -243,10 +243,10 @@
   </div>
 </div> -->
 <!-- END OF "TAGS.HTML" RESOURCE -->
-
+<!-- 
             </div>
           </div>
-        </div>
+        </div> -->
         <br>
         <p>The following information will help social impact organizations find the right technology to fit their needs. The “tile summary” is the main listing on openMarketplace. The filter tags help organizations sort through numerous technologies based on their needs, location, field users, and other factors.</p>
         <p>We encourage suggestions from all members of the community whether they be product developers, consultants, or end-user organizations. There are a few required fields that cover basic and summary information. Beyond that, we ask that listings focus on the functionality of each technology and what it enables users to do and avoid statements that place more value on one technology over another. Your submission must be reviewed and accepted by one of the core contributors at openfn before it is updated. Again, please refrain from using value words to ensure the listing is accepted promptly.</p>
