added some small details to signup pages

--- a/public/the_bridge_templates/user/credentials.html
+++ b/public/the_bridge_templates/user/credentials.html
@@ -41,7 +41,9 @@
 
 
         <form ng-submit="submitSFForm()">
+        <h5>Username</h5>
           <input type="text" class="form-control" name = "sf_username" placeholder="Username" ng-model="sfData.sf_username">
+          <h5>Password</h5>
           <input type="password" class="form-control" name = "sf_password" placeholder="Password" ng-model="sfData.sf_password">
           <h5 id="security_token">Security Token
           <i class="fa fa-question-circle"></i></h5>
