--- a/public/the_bridge_templates/user/user_info.html
+++ b/public/the_bridge_templates/user/user_info.html
@@ -22,11 +22,17 @@
 
 
                   <form ng-submit="submitUserForm()">
+                  <h5>Email</h5>
                     <input type="text" class="form-control" name = "email" placeholder="Email" ng-model="formData.email">
-                    <input type="text" class="form-control" name = "password" placeholder="Password" ng-model="formData.password">
-                    <input type="text" class="form-control" name = "password_confirmation" placeholder="Password Confirmation" ng-model="formData.password_confirmation">
+                    <h5>Password</h5>
+                    <input type="password" class="form-control" name = "password" placeholder="Password" ng-model="formData.password">
+                    <h5>Password Confirmation</h5>
+                    <input type="password" class="form-control" name = "password_confirmation" placeholder="Password Confirmation" ng-model="formData.password_confirmation">
+                    <h5>First Name</h5>
                     <input type="text" class="form-control" name = "first_name" placeholder="First Name" ng-model="formData.first_name">
+                    <h5>Last Name</h5>
                     <input type="text" class="form-control" name = "last_name" placeholder="Last Name" ng-model="formData.last_name">
+                    <h5>Organisation</h5>
                     <input type="text" class="form-control" name = "organisation" placeholder="Organisation" ng-model="formData.organisation">
                     <div class="btn-group plan_btn" data-toggle="buttons">
                         <label class="btn btn-default free pay"  ng-click="clickPlan('Free')">
