--- a/public/the_bridge_templates/user/credentials.html
+++ b/public/the_bridge_templates/user/credentials.html
@@ -22,18 +22,18 @@
 
         <form ng-submit="submitODKForm()">
         <h5>Instance URL</h5>
-          <input type="text" class="form-control" name = "odk_url" placeholder="Instance URL" ng-model="odkData.odk_url">
+          <input type="text" class="form-control" name = "odk_url" ng-model="odkData.odk_url">
           <h5>Username</h5>
-          <input type="text" class="form-control" name = "odk_username" placeholder="Username" ng-model="odkData.odk_username">
+          <input type="text" class="form-control" name = "odk_username" ng-model="odkData.odk_username">
           <h5>Password</h5>
-          <input type="password" class="form-control" name = "odk_password" placeholder="Password" ng-model="odkData.odk_password">
+          <input type="password" class="form-control" name = "odk_password" ng-model="odkData.odk_password">
           <input type="hidden" name="subscription_plan" ng-model="odkData.subscription_plan">
-          <button type="submit" class="btn btn-success btn-lg btn-block">
-            Update
-          </button>              
+                       
         </form>
 
         </div>
+        <br>
+        <br>
 
 
         <div class="container col-md-6 col-md-offset-3">
@@ -41,11 +41,11 @@
 
 
         <form ng-submit="submitSFForm()">
-          <input type="text" class="form-control" name = "sf_username" placeholder="Username" ng-model="sfData.sf_username">
-          <input type="password" class="form-control" name = "sf_password" placeholder="Password" ng-model="sfData.sf_password">
+          <input type="text" class="form-control" name = "sf_username" ng-model="sfData.sf_username">
+          <input type="password" class="form-control" name = "sf_password" ng-model="sfData.sf_password">
           <h5 id="security_token">Security Token
           <i class="fa fa-question-circle"></i></h5>
-          <input type="text" class="form-control" name = "sf_security_token" placeholder="Security Token" ng-model="sfData.sf_security_token">
+          <input type="text" class="form-control" name = "sf_security_token" ng-model="sfData.sf_security_token">
           <div id="security_token_help" style="display:none;"><br>
             <p>1. Search “security token” in your email to see if you've received a security token in the past. (If you have, go to step 5.)</p>
             <p>2. To reset or create a new security token, click your name and “Setup” in Salesforce</p>
@@ -56,7 +56,7 @@
 
           <h5 id="consumer_key">Consumer Key
           <i class="fa fa-question-circle"></i></h5>
-          <input type="text" class="form-control" name = "sf_app_key" placeholder="Consumer Key" ng-model="sfData.sf_app_key">
+          <input type="text" class="form-control" name = "sf_app_key" ng-model="sfData.sf_app_key">
           <div id="consumer_key_help" style="display:none;"><br>
                   <p>1. Goto “Apps” (in the “App Setup” / “Create” section) in your Salesforce Setup menu.</p>
                   <p>2. Click “New” in the “Connected Apps” section at the bottom of the page.</p>
@@ -71,7 +71,7 @@
                   <p>11. Click to reveal your “Consumer Secret”, then copy it and paste it here.</p>
               </div>
           <h5>Consumer Secret</h5>
-          <input type="text" class="form-control" name = "sf_app_secret" placeholder="Consumer Secret" ng-model="sfData.sf_app_secret">
+          <input type="text" class="form-control" name = "sf_app_secret" ng-model="sfData.sf_app_secret">
           
           <input type="hidden" name="subscription_plan" ng-model="sfData.subscription_plan">
 
