setup welcome email

--- a/public/the_bridge_templates/cases/index.html
+++ b/public/the_bridge_templates/cases/index.html
@@ -4,18 +4,20 @@
         our <strong>Impact</strong>
       </h1>
       <h3>
-        Our impact is the increase in our user's impact.
+        Creating a more efficient and effective social sector.
       </h3>
     </div>
 </header>
 <br>
 <div class="container col-md-8 col-md-offset-2 team-member-page">
   <br><br>
+  <h4>
   <p>
-    With open[Fn] these organizations are more efficient and effective. Longer body text here about how what we do generates impact. Longer body text here about how what we do generates impact. Longer body text here about how what we do generates impact. Longer body text here about how what we do generates impact. Longer body text here about how what we do generates impact. Longer body text here about how what we do generates impact. Longer body text here about how what we do generates impact. Longer body text here about how what we do generates impact. Longer body text here about how what we do generates impact. Longer body text here about how what we do generates impact. 
+    Our vision is a copmletely transparent and integrate ICT4D landscape. We make existing technologies easier to find, setup, and connect, while enabling a whole new generation of tech for social impact. Organiaztions around the world are saving time and money on the implementation of crucial technologies, and by <strong>automating the flow of data</strong> between these tools we get better data to staff and beneficiaries, faster.
   <br><br>
-    Check out some of the amazing work being made more efficient and effective with open[Fn] integrations...
+    Check out some of the amazing projects driven by the open[Fn] platform:
   </p>
+  </h4>
   <br><br>
   <div class="cases" ng-controller="CasesController as cases">
     <div class="row team-member-page" ng-repeat="case in cases | orderBy:'order'">
