--- a/public/the_bridge_templates/marketplace/products.html
+++ b/public/the_bridge_templates/marketplace/products.html
@@ -1,6 +1,6 @@
 <div ng-repeat="product in (filteredProducts =( products | filter:filterProducts)) | orderBy:['-integrated','-votes_count','name']">
   <div class="product-container col-lg-6 col-md-6 col-sm-6 col-xs-12">
-    <div ng-class="product.integrated ? 'product integrated' : 'product'" tooltip-trigger="mouseenter" tooltip="Click to learn about {{product.name}}." ng-click="go('/product/' + product.id)" style="cursor: default">
+    <div ng-class="product.integrated ? 'product integrated' : 'product'" ng-click="go('/product/' + product.id)" style="cursor: default">
 
       <div class='rating'>
         <span class='live'>
@@ -26,6 +26,7 @@
         </span>
         &nbsp;({{product.reviews_count}})
       </div>
+      
       <h3 class="title">
         {{product.name}}
       </h3>
